--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,9 +177,9 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="/movie/get">🎬 MovieVerse</a>
+      <a class="navbar-brand" href="/movie/get">MovieVerse</a>
       <div>
-        <a href="/movie/add" class="btn btn-outline-light btn-sm"><span>➕ Add Movie</span></a>
+        <a href="/movie/add" class="btn btn-outline-light btn-sm"><span> Add Movie</span></a>
       </div>
     </div>
   </nav>
@@ -227,8 +227,8 @@
           <% } else { %>
             <tr>
               <td colspan="6" class="text-center text-muted py-4">
-                No movies available yet 🎞️<br>
-                <a href="/movie/add" class="btn btn-add-movie mt-3">🎬 Add Your First Movie</a>
+                No movies available yet <br>
+                <a href="/movie/add" class="btn btn-add-movie mt-3"> Add Your First Movie</a>
               </td>
             </tr>
           <% } %>
@@ -238,7 +238,7 @@
   </div>
 
   <footer>
-    <p>© <%= new Date().getFullYear() %> MovieVerse. Designed for Cinematic Creators 🎬</p>
+    <p>© <%= new Date().getFullYear() %> MovieVerse. Designed for Cinematic Creators </p>
   </footer>
 
 </body>
